Update for java 8 compatibility